--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "give-a",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.4"
-  }
+    "name": "give-a",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier": "prettier . -w"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.7.2",
+        "@emotion/react": "^11",
+        "@emotion/styled": "^11",
+        "framer-motion": "^4",
+        "next": "12.0.4",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "eslint": "7",
+        "eslint-config-next": "12.0.4",
+        "prettier": "^2.4.1"
+    }
 }
