--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "prettier": "prettier . -w"
     },
     "dependencies": {
+        "@auth0/nextjs-auth0": "^1.6.1",
         "@chakra-ui/react": "^1.7.2",
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
