--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^1.7.2",
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
+        "axios": "^0.24.0",
         "framer-motion": "^4",
         "mongoose": "^6.0.13",
         "next": "12.0.4",
