--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
         "axios": "^0.24.0",
+        "cloudinary": "^1.27.1",
         "framer-motion": "^4",
         "mongoose": "^6.0.13",
         "next": "12.0.4",
